hooked up images folder to be included with build, moved pages in pages folder

--- a/site/pages/page-full.html
+++ b/site/pages/page-full.html
@@ -1,4 +1,4 @@
-include "header.html"
+include "../include/header.html"
 
     <div class="main-content centered">
         <article>
@@ -13,5 +13,5 @@ include "header.html"
         </article>
     </div>
 
-include "promo.html"
-include "footer.html"
+include "../include/promo.html"
+include "../include/footer.html"
