did some stuff, apparently

--- a/site/services.html
+++ b/site/services.html
@@ -2,74 +2,18 @@ include "header.html"
 
     <div class="masthead">
         <div class="container">
-            <h1>Our Services</h1>
+            <h1 data-barley="servicepage_title" data-barley-editor="mini">Our Services</h1>
         </div>
     </div>
     <div class="main-content">
         <section class="text-block-area services">
+            <!-- repeatoldest:services:50 -->
             <div class="text-block">
-                <i class="icon fa fa-car"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
+                <i class="icon fa fa-check"></i>
+                <h2><a href="%URL%">%TITLE%</a></h2>
+                <div class="content" data-barley="services_%ID%_excerpt" data-barley-editor="plus">%EXCERPT%</div>
             </div>
-            <div class="text-block">
-                <i class="icon fa fa-coffee"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-legal"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-car"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-coffee"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-legal"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-car"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-coffee"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                </div>
-            </div>
-            <div class="text-block">
-                <i class="icon fa fa-legal"></i>
-                <h2><a href="services-single.html">Service</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                </div>
-            </div>
+            <!-- endrepeatoldest -->
         </section>
     </div>
     
