--- a/site/gallery-single.html
+++ b/site/gallery-single.html
@@ -1,20 +1,20 @@
 include "header.html"
 
-    <div class="gallery-image">
+    <div class="gallery-image" data-barley="gallery_image" data-barley-editor="image-special">
         <img src="http://lorempixel.com/g/1400/800/nature" />
     </div>
     <div class="main-content divide">
         <article>
             <header>
-                <h2 class="page-title">Gallery Item</h2>
+                <h2 class="page-title" data-barley="gallery_title" data-barley-editor="mini">Gallery Item</h2>
             </header>
-            <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
+            <div class="content" data-barley="gallery_body" data-barley-editor="plus">
+                <p>Start typing...</p>
             </div>
         </article>
         <aside>
-            <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. </p>
+            <div data-barley="gallery_aside" data-barley-editor="plus">
+                <p>Start typing... </p>
             </div>
         </aside>
     </div>
