--- a/site/services-single.html
+++ b/site/services-single.html
@@ -3,30 +3,23 @@ include "header.html"
     <div class="main-content divide">
         <article>
             <header>
-                <h2 class="page-title">Service</h2>
+                <h2 class="page-title" data-barley="services_title" data-barley-editor="mini">Service</h2>
             </header>
-            <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <div class="content" data-barley="services_body" data-barley-editor="plus">
+                <p>Start typing...</p>
             </div>
         </article>
         <aside>
             <nav class="service-links">
                 <ul>
-                    <li><a href="#">Service A</a></li>
-                    <li><a href="#">Service B</a></li>
-                    <li><a href="#">Service C</a></li>
-                    <li><a href="#">Service D</a></li>
-                    <li><a href="#">Service E</a></li>
-                    <li><a href="#">Service F</a></li>
-                    <li><a href="#">Service G</a></li>
-                    <li><a href="#">Service H</a></li>
+                    <!-- repeatoldest:services:30 -->
+                    <li><a href="%URL%">%TITLE%</a></li>
+                    <!-- endrepeatoldest -->
                 </ul>
                 <a href="services.html" class="back-link"><i class="fa fa-angle-left"></i> All Services</a>
             </nav>
-            <div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. </p>
+            <div data-barley="service_sidebar" data-barley-editor="plus">
+                <p>Start typing... </p>
             </div>
         </aside>
 
