--- a/site/team.html
+++ b/site/team.html
@@ -2,89 +2,25 @@ include "header.html"
 
     <div class="masthead">
         <div class="container">
-            <h1>Our Team</h1>
+            <h1 data-barley="teampage_title" data-barley-editor="mini">Our Team</h1>
         </div>
     </div>
     <div class="main-content">
         <section class="text-block-area team">
+            <!-- repeatoldest:team:50 -->
             <div class="item">
-                <figure style="background-image: url(http://lorempixel.com/g/800/400/people);">
+                <figure>
+                    <div class="image-placeholder">%IMAGE%</div>
                     <div class="overlay">
-                        <a href="team-single.html" class="more-link">
+                        <a href="%URL%" class="more-link">
                            <i class="fa fa-angle-right"></i>
                         </a>
                     </div>
                 </figure>
-                <h2><a href="team-single.html">John Doe</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
+                <h2><a href="%URL%">%TITLE%</a></h2>
+                <div class="content" data-barley="team_%ID%_excerpt" data-barley-editor="plus">%EXCERPT%</div>
             </div>
-            <div class="item">
-                <figure style="background-image: url(http://lorempixel.com/g/800/400/people);">
-                    <div class="overlay">
-                        <a href="team-single.html" class="more-link">
-                           <i class="fa fa-angle-right"></i>
-                        </a>
-                    </div>
-                </figure>
-                <h2><a href="team-single.html">John Doe</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
-            <div class="item">
-                <figure style="background-image: url(http://lorempixel.com/g/800/400/people);">
-                    <div class="overlay">
-                        <a href="team-single.html" class="more-link">
-                           <i class="fa fa-angle-right"></i>
-                        </a>
-                    </div>
-                </figure>
-                <h2><a href="team-single.html">John Doe</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
-            <div class="item">
-                <figure style="background-image: url(http://lorempixel.com/g/800/400/people);">
-                    <div class="overlay">
-                        <a href="team-single.html" class="more-link">
-                           <i class="fa fa-angle-right"></i>
-                        </a>
-                    </div>
-                </figure>
-                <h2><a href="team-single.html">John Doe</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
-            <div class="item">
-                <figure style="background-image: url(http://lorempixel.com/g/800/400/people);">
-                    <div class="overlay">
-                        <a href="team-single.html" class="more-link">
-                           <i class="fa fa-angle-right"></i>
-                        </a>
-                    </div>
-                </figure>
-                <h2><a href="team-single.html">John Doe</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
-            <div class="item">
-                <figure style="background-image: url(http://lorempixel.com/g/800/400/people);">
-                    <div class="overlay">
-                        <a href="team-single.html" class="more-link">
-                           <i class="fa fa-angle-right"></i>
-                        </a>
-                    </div>
-                </figure>
-                <h2><a href="team-single.html">John Doe</a></h2>
-                <div class="content">
-                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. </p>
-                </div>
-            </div>
+            <!-- endrepeatoldest -->
         </section>
     </div>
     
