Removed build folder. Added Slider Panels to settings.json. Adjusted HTML for Sliders to remove need for nested Barley IDs. Added default content for first run of homepage for slider content.

--- a/site/slider-single.html
+++ b/site/slider-single.html
@@ -2,8 +2,10 @@ include "header.html"
 
 		<div id="carousel-single" class="carousel slide" data-ride="carousel">
 		    <div class="carousel-inner">
-		        <figure class="item active" data-barley="slider_content" data-barley-editor="image">
-		            <img src="http://lorempixel.com/g/1240/500">
+		        <figure class="item active">
+		        	<div data-barley="slider_content" data-barley-editor="image">
+		            	<img src="http://lorempixel.com/g/1240/500">
+		            </div>
 		            <figcaption class="carousel-caption">
 		                <div class="caption-content" data-barley="slider_caption" data-barley-editor="plus">
 		                    Nullam id dolor id nibh ultricies vehicula ut id elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
