Updated Package to latest LESS. Google Map is now based on business address. Added default messages for each index. Renamed portfolio to gallery.

--- a/site/services-single.html
+++ b/site/services-single.html
@@ -16,6 +16,11 @@ include "header.html"
                     <li><a href="%URL%">%TITLE%</a></li>
                     <!-- endrepeatoldest -->
                 </ul>
+
+                <!-- default_message:services -->
+                <p>Add Services to see them listed on this page.</p>
+                <!-- enddefault_message -->
+                
                 <a href="services.html" class="back-link"><i class="fa fa-angle-left"></i> All Services</a>
             </nav>
             <div data-barley="service_sidebar" data-barley-editor="plus">
