--- a/site/contact.html
+++ b/site/contact.html
@@ -1,7 +1,7 @@
 include "header.html"
 
     <div class="masthead map grayscale">
-        <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d382042.78995957214!2d-75.51621232333984!3d41.57553583391117!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c4cd94246409fd%3A0x790b31a19d49aed2!2s44+N+Scott+St!5e0!3m2!1sen!2sus!4v1397588600162"></iframe>
+        <iframe width="100%" height="100%" id="googlemap" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="#"></iframe>
     </div>
     <div class="main-content divide">
         <article>
