--- a/site/gallery.html
+++ b/site/gallery.html
@@ -2,7 +2,7 @@ include "header.html"
 
     <div class="masthead">
         <div class="container">
-            <h1 data-barley="gallerypage_title" data-barley-editor="mini">Photo Gallery</h1>
+            <h1 data-barley="gallerypage_title" data-barley-editor="mini">Gallery</h1>
         </div>
     </div>
     <div class="main-content">
@@ -12,7 +12,7 @@ include "header.html"
                 <figure>
                     <div class="image-placeholder">%IMAGE%</div>
                     <div class="overlay">
-                        <a href="%IMAGE%" class="thumbnail">
+                        <a href="#" class="thumbnail">
                             <i class="fa fa-plus"></i>
                         </a>
                         <a href="%URL%" class="more-link">
@@ -22,6 +22,11 @@ include "header.html"
                 </figure>
             </div>
             <!-- endrepeatoldest -->
+
+            <!-- default_message:gallery -->
+            <p>Add a Gallery Piece to see gallery items on this page.</p>
+            <!-- enddefault_message -->
+            
         </section>
     </div>
     
