Moved default message to index pages. Oops. Added one for Team. Fixed slider caption. Addresses #2

--- a/site/team.html
+++ b/site/team.html
@@ -21,6 +21,10 @@ include "header.html"
                 <div class="content" data-barley="team_%ID%_excerpt" data-barley-editor="plus">%EXCERPT%</div>
             </div>
             <!-- endrepeatoldest -->
+
+            <!-- default_message:team -->
+            <p>Add Team Members to see them listed on this page.</p>
+            <!-- enddefault_message -->
         </section>
     </div>
     
