--- a/site/services.html
+++ b/site/services.html
@@ -14,6 +14,10 @@ include "header.html"
                 <div class="content" data-barley="services_%ID%_excerpt" data-barley-editor="plus">%EXCERPT%</div>
             </div>
             <!-- endrepeatoldest -->
+
+            <!-- default_message:services -->
+            <p>Add Services to see them listed on this page.</p>
+            <!-- enddefault_message -->
         </section>
     </div>
     
