--- a/site/contact.html
+++ b/site/contact.html
@@ -6,9 +6,9 @@ include "header.html"
     <div class="main-content divide">
         <article>
             <header>
-                <h2 class="page-title">Contact Us</h2>
+                <h2 class="page-title" data-barley="business_contact_title" data-barley-editor="mini">Contact Us</h2>
             </header>
-            <div class="content">
+            <div class="content" data-barley="business_contact_content" data-barley-editor="advanced">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Maecenas faucibus mollis interdum. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
@@ -16,9 +16,10 @@ include "header.html"
         </article>
         <aside>
             <div>
-                <h4>Holla!</h4>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. </p>
+                <div data-barley="business_contact_sidebar" data-barley-editor="advanced">
+                <h4>Get In Touch</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                </div>
                 <div id="barley-form">
                     <input type="hidden" name="to" id="to" value="youremail@yourdomain.com" />
                     <input type="hidden" name="subject" id="to" value="Contact Form Submission" />
