added masthead barlification, removed editor on social drop down

--- a/site/blog.html
+++ b/site/blog.html
@@ -11,10 +11,12 @@ include "header.html"
                 <img src="http://37.media.tumblr.com/f6c67ec2821a91051e4175f8a102e1e2/tumblr_n6rzpcsMk41st5lhmo1_1280.jpg" />
             </div>
         </div>
+        <!-- 
         <div id="blog-color-target" class="color-target">
             <i class="fa fa-tint"></i>
         </div>
-        include "color-picker.html" 
+        -->
+        <!-- include "color-picker.html" -->
         <!-- endowner -->
     </div>
     <div class="main-content divide">
