--- a/site/gallery-single.html
+++ b/site/gallery-single.html
@@ -1,6 +1,6 @@
 include "header.html"
 
-    <div class="gallery-image" data-barley="gallery_image" data-barley-editor="image-special">
+    <div class="gallery-image" data-barley="gallery_image" data-barley-editor="image">
         <img src="http://lorempixel.com/g/1400/800/nature" />
     </div>
     <div class="main-content divide">
