--- a/site/gallery.html
+++ b/site/gallery.html
@@ -1,9 +1,17 @@
 include "header.html"
 
     <div class="masthead">
+        <div class="background"></div>
         <div class="container">
             <h1 data-barley="gallerypage_title" data-barley-editor="mini">Gallery</h1>
         </div>
+        <!-- owner -->
+        <div id="gallery-mast-target" class="bg-target">
+            <div class="target-wrap" data-barley="gallerypage_masthead" data-barley-editor="image">
+                <img src="http://37.media.tumblr.com/f6c67ec2821a91051e4175f8a102e1e2/tumblr_n6rzpcsMk41st5lhmo1_1280.jpg" />
+            </div>
+        </div>
+        <!-- endowner -->
     </div>
     <div class="main-content">
         <section class="text-block-area gallery thumbnails" data-toggle="lightbox">
