--- a/site/pages/page-full.html
+++ b/site/pages/page-full.html
@@ -1,6 +1,6 @@
 include "../include/header.html"
 
-    <div class="main-content centered">
+    <div class="main-content full">
         <article>
             <header>
                 <h2 class="page-title" data-barley="%PAGE%_title" data-barley-editor="mini">Full-Width Page</h2>
