--- a/site/team-single.html
+++ b/site/team-single.html
@@ -3,7 +3,7 @@ include "header.html"
     <div class="main-content member">
         <aside>
             <figure>
-                <div class="member-photo" data-barley="team_image" data-barley-editor="image-special">
+                <div class="member-photo" data-barley="team_image" data-barley-editor="image">
                     <img src="http://lorempixel.com/g/800/600/people">
                 </div>
                 <div class="blurb" data-barley="team_blurb" data-barley-editor="plus">
