--- a/site/services.html
+++ b/site/services.html
@@ -1,9 +1,17 @@
 include "header.html"
 
     <div class="masthead">
+        <div class="background"></div>
         <div class="container">
             <h1 data-barley="servicepage_title" data-barley-editor="mini">Our Services</h1>
         </div>
+        <!-- owner -->
+        <div id="service-mast-target" class="bg-target">
+            <div class="target-wrap" data-barley="servicepage_masthead" data-barley-editor="image">
+                <img src="http://37.media.tumblr.com/f6c67ec2821a91051e4175f8a102e1e2/tumblr_n6rzpcsMk41st5lhmo1_1280.jpg" />
+            </div>
+        </div>
+        <!-- endowner -->
     </div>
     <div class="main-content">
         <section class="text-block-area services">
@@ -11,7 +19,7 @@ include "header.html"
             <div class="text-block">
                 <i class="icon fa fa-check"></i>
                 <h2><a href="%URL%">%TITLE%</a></h2>
-                <div class="content" data-barley="services_%ID%_excerpt" data-barley-editor="plus">%EXCERPT%</div>
+                <div class="content" data-barley="services_excerpt" data-barley-editor="plus">%EXCERPT%</div>
             </div>
             <!-- endrepeatoldest -->
 
